# study-paper

./: features.cpp  report.odt
classification/: CMakeLists.txt  aux-functions-def.hpp  aux-functions-impl.hpp  bar_all_shift0.m  confMat_kth.m  grassmann-metrics-def.hpp  grassmann-metrics-impl.hpp  kth-GrassBC-svm-cross-validation-def.hpp  kth-GrassBC-svm-cross-validation-impl.hpp  kth-GrassPM-svm-cross-validation-def.hpp  kth-GrassPM-svm-cross-validation-impl.hpp  kth-LogEucl-svm-cross-validation-def.hpp  kth-LogEucl-svm-cross-validation-impl.hpp  kth-SteinDiv-svm-cross-validation-def.hpp  kth-SteinDiv-svm-cross-validation-impl.hpp  kth-classification-onematrix-video.cpp  kth-classification-svm.cpp  kth-classification.cpp  kth-cross-validation-def-OpenMP.hpp  kth-cross-validation-def.hpp  kth-cross-validation-impl-OpenMP.hpp  kth-cross-validation-impl.hpp  kth-cross-validation-one-def.hpp  kth-cross-validation-one-impl.hpp  kth-svm-cross-validation-def.hpp  kth-svm-cross-validation-impl.hpp  nor_svm_oneseg_confMat_kth.m  oneseg_confMat_kth.m  oneseg_kth_Grassmann_varying_p.m  performance_svm_shifts.m  riemannian-metrics-impl.hpp  svm_oneseg_confMat_kth.m
cov_matrices/: CMakeLists.txt  cov-mat-def.hpp  cov-mat-impl.hpp  kth-cov-mat.cpp
dim_12_no_xy/classification/: CMakeLists.txt  Dim12_onesegNN_kth_Grassmann_varying_p.m  confMatGet.m  confMatPlot.m  kth-GrassBC-svm-cross-validation-impl.hpp  kth-classification-onematrix-video.cpp  kth-classification-svm.cpp  kth-cross-validation-def.hpp  kth-cross-validation-one-impl.hpp  riemannian-metrics-def.hpp
dim_12_no_xy/grass_points/: CMakeLists.txt  grass-impl.hpp  kth-grass-points.cpp
features/: CMakeLists.txt  features-kth.cpp  optflow-feat-def.hpp  optflow-feat-impl.hpp
grass_points/: CMakeLists.txt  grass-def.hpp  grass-impl.hpp  kth-grass-points.cpp  people_list.txt
kernels/: compute_projPoly_kernel_svm.m  compute_proj_kernel_svm.m  kth_test.m  kth_test_LED_RBF.m  kth_test_LogEuclidean.m  kth_test_ProjectionPoly.m  kth_test_ProjectionRBF.m  kth_train.m  kth_train_LogEuclidean.m  kth_train_ProjectionPoly.m  kth_train_ProjectionRBF.m  main_train_test.m  performance_kernels.m  performance_kernels_II.m
(+42 files in other folders)
