cmake_minimum_required(VERSION 2.8)
project(v1)
#set(CMAKE_BUILD_TYPE Release)
find_package( OpenCV REQUIRED)
find_package( Armadillo REQUIRED)
find_package (HDF5)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -pedantic -fopenmp")
add_executable( kth-gp.exe kth-grass-points.cpp)
target_link_libraries( kth-gp.exe ${OpenCV_LIBS} -larmadillo -lhdf5)
